docs/7.57/md/abencds_assoc_join_v1.md
---
title: "CDS DDL - DDIC-Based View, Associations and Joins"
description: |
  This topic describes the different use cases of CDS associations. It explains in which use case a join is generated on the database and which join type(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenjoin_type_glosry.htm 'Glossary Entry') is generated each time. Examples and screens
version: "7.57"
category: "cds"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_assoc_join_v1.htm"
abapFile: "abencds_assoc_join_v1.htm"
keywords: ["select", "do", "if", "case", "try", "method", "class", "data", "abencds", "assoc", "join"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Core Data Services (ABAP CDS)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds.htm) →  [Obsolete CDS Language Elements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_obsolete.htm) →  [Obsolete CDS Entities](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_entities_obsolete.htm) →  [ABAP CDS - DDIC-Based Entities (Obsolete)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_ddic_entity.htm) →  [ABAP CDS - DDIC-Based Views (Obsolete)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_v1_views.htm) →  [CDS DDL - DEFINE VIEW ddic\_based](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_define_view_v1.htm) →  [CDS DDL - DDIC-Based View, SELECT](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_select_statement_v1.htm) →  [CDS DDL - DDIC-Based View, SELECT, Associations](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_association_v1.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: CDS DDL - DDIC-Based View, Associations and Joins, ABENCDS_ASSOC_JOIN_V1, 757%0D%0A%0
D%0AError:%0D%0A%0D%0A%0D%0A%0D%0ASuggestion for improvement:)

CDS DDL - DDIC-Based View, Associations and Joins

This topic describes the different use cases of CDS associations. It explains in which use case a join is generated on the database and which [join type](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenjoin_type_glosry.htm "Glossary Entry") is generated each time. Examples and screenshots of the SQL statement generated on the database are provided to further illustrate the transformation into joins.

When a CDS association is instantiated as join on the database, then the [association source](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenassociation_source_glosry.htm "Glossary Entry") represents the left side and the [association target](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenassociation_target_glosry.htm "Glossary Entry") represents the right side of the join. The ON condition of the association is added to the ON condition of the join.

There are the following basic use cases for CDS associations:

-   [Using a Path Expression in the FROM Clause](#abencds-assoc-join-v1-1-------exposing-a-cds-association---@ITOC@@ABENCDS_ASSOC_JOIN_V1_2)
-   [Adding a Field from the Association Target to the Element List](#abencds-assoc-join-v1-3-------using-a-path-expression-in-the-where-clause---@ITOC@@ABENCDS_ASSOC_JOIN_V1_4)
-   [Using an Exposed Association in an External View](#abencds-assoc-join-v1-5-------using-an-exposed-association-in-abap-sql---@ITOC@@ABENCDS_ASSOC_JOIN_V1_6)

Using a Path Expression in the FROM Clause   

Use case: the data source of a CDS view entity after FROM is specified as path expression.

Example:

@AccessControl.authorizationCheck: #NOT\_REQUIRED
define view entity demo\_cds\_assoc\_from
  as select from demo\_cds\_assoc\_spfli.\_sflight
{  
  key carrid,
      connid  
}

SQL statement generated on the database:

![Figure](abdoc_assoc_6.png)

The SQL statement generated on the database shows that the path expression is transformed into an [inner join](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeninner_join_glosry.htm "Glossary Entry") on the database.

Exposing a CDS Association   

Use case: an association is defined and exposed in the element list of a CDS view entity. In this way, it can be used in other CDS entities. However, the association is not part of the output and no data is selected from the association target.

Example:

@AccessControl.authorizationCheck: #NOT\_REQUIRED
define view entity demo\_cds\_assoc\_exposition
  as select from scarr
  association \[1..\*\] to demo\_cds\_assoc\_spfli as \_spfli  
    on scarr.carrid = \_spfli.carrid
{
      \_spfli,
  key carrid,
      carrname
}

SQL statement generated on the database:

![Figure](abdoc_assoc_1.png)

The SQL statement generated on the database shows that no join is generated and that the association is not mentioned in the statement that is passed to the database.

Adding a Field from the Association Target to the Element List   

Use case: an association is defined and an element from the association target is included in the element list of the same CDS view entity. In this example, the association is used, but not exposed, and therefore it cannot be used in path expressions of other CDS entities.

Example:

@AccessControl.authorizationCheck: #NOT\_REQUIRED
define view entity demo\_cds\_assoc\_element
  as select from scarr
  association \[1..\*\] to demo\_cds\_assoc\_spfli as \_spfli  
    on scarr.carrid = \_spfli.carrid
{
  key carrid,  
      \_spfli.connid,
      carrname
}

SQL statement generated on the database:

![Figure](abdoc_assoc_2.png)

The SQL statement generated on the database shows that the path expression is transformed into a [left outer join](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenleft_outer_join_glosry.htm "Glossary Entry") on the database.

Using a Path Expression in the WHERE Clause   

Use case: an association is defined and used in the WHERE condition of the same CDS view entity. In this example, the association is used, but not exposed, and therefore it cannot be used in path expressions of other CDS entities.

Example:

@AccessControl.authorizationCheck: #NOT\_REQUIRED
define view entity demo\_cds\_assoc\_where
  as select from scarr
  association to demo\_cds\_assoc\_spfli as \_spfli  
    on scarr.carrid = \_spfli.carrid
{
  key carrid,  
      carrname
} where \_spfli.connid = '....'

SQL statement generated on the database:

![Figure](abdoc_assoc_3.png)

The SQL statement generated on the database shows that the path expression is transformed into a [left outer join](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenleft_outer_join_glosry.htm "Glossary Entry") with the cardinality many to one.

Using an Exposed Association in an External View   

Use case: A CDS view entity uses an association that was defined and published in another CDS entity. The association is used in a path expression to include a field from the association target in the element list of the CDS view entity.

Example:

@AccessControl.authorizationCheck: #NOT\_REQUIRED
define view entity demo\_cds\_assoc\_external\_usage
  as select from
    demo\_cds\_assoc\_exposition  
    {
      carrid,
      carrname,  
      \_spfli.connid
    }

SQL statement generated on the database:

![Figure](abdoc_assoc_4.png)

The SQL statement generated on the database shows that the path expression is transformed into a [left outer join](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenleft_outer_join_glosry.htm "Glossary Entry") on the database. Note that this happens in the view that uses the association, and not in the view that defines the association.

Using an Exposed Association in ABAP SQL   

Use case: The program DEMO\_CDS\_SELECT\_ASSOC uses an association that was defined and published in a CDS view entity in a path expression in ABAP SQL.

Example:

REPORT demo\_cds\_select\_assoc.
CLASS demo DEFINITION
  PUBLIC SECTION.
    CLASS-METHODS main.
ENDCLASS.
CLASS demo IMPLEMENTATION.
  METHOD main.
    SELECT carrid,
           carrname,
           /\_spfli\[ (\*) \]-connid
           FROM demo\_cds\_assoc\_exposition
           INTO TABLE @DATA(result).
  ENDMETHOD.
ENDCLASS.
START-OF-SELECTION.
  demo=>main( ).

SQL statement generated on the database:

![Figure](abdoc_assoc_5.png)

The path expression is transformed into a [left outer join](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenleft_outer_join_glosry.htm "Glossary Entry") on the database.